@@ -1,3 +1,8 @@
+.root{
+    -fx-font-size: 12px;
+    -fx-font-family: "Times New Roman";
+}
+
 .tooltip {
     -fx-background-color: #E8E8E8;
     -fx-text-fill: black;
