@@ -1,0 +1,4 @@
+.root{
+    -fx-font-size: 12px;
+    -fx-font-family: "Times New Roman";
+}
